# clova-lambdaonrust-kamefood

./: .gitignore  Cargo.toml  package.json  serverless.yml
.serverless/: cloudformation-template-update-stack.json  serverless-state.json
src/: foods.rs  main.rs
