[package]
name = "kamefood-clova"
version = "0.2.0"
authors = ["takesiba.masrao <takesiba.masrao@gmail.com>"]
edition = "2018"

[dependencies]
lambda_runtime = { version = "0.2.0", git = "https://github.com/awslabs/aws-lambda-rust-runtime.git" }
lambda_http = { version = "0.1.0", git = "https://github.com/awslabs/aws-lambda-rust-runtime.git" }
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
clova_webhook_utils = "0.0.4"
#clova_webhook_utils = { path = "../clova_webhook_service" }
